# slack-lens

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
slack_lens/: __init__.py  __version__.py  archiver.py  browser.py  cli.py  client.py  config.py  formatter.py  log.py  models.py  search.py  slack_client.py  storage.py
slack_lens/archiver/: __init__.py  channel_archiver.py  debug.py  extractor.py  files.py
slack_lens/cli/: __init__.py  __main__.py  commands.py
tests/: __init__.py
