[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-lens"
version = "0.1.1"
description = "Browser-based Slack channel viewer for research"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "yaacov" }]
readme = "README.md"
dependencies = [
    "playwright>=1.40.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yaacov/slack-lens"
Repository = "https://github.com/yaacov/slack-lens"

[project.scripts]
slack-lens = "slack_lens.cli:main"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["slack_lens"]
